Fixed a bug where the filter and sort menus appearing in fornt of the navbar because the z-index was to low

--- a/client/src/components/NavBar/NavBar.module.css
+++ b/client/src/components/NavBar/NavBar.module.css
@@ -1,9 +1,9 @@
 .nav {
     position: sticky;
     top: 0;
-    /* z-index: 1; */
     background-color: #CCFF66;
     border-bottom: 1px solid #e5e5e5;
+    z-index: 2;
 }
 
 .nav_list {
